--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 django>=1.4.2
 djangorestframework>=2.1.1
 django-allauth>=0.8.2
+django-extensions>=1.0.1
 django-model-utils>=1.1.0
 django-require>=1.0.0
 django-timedeltafield>=0.6.7
+psycopg2>=2.4.5
 south>=0.7.6
